--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <a href="./1-gallery.html">gallery</a>
+<ul>
+    <li><a href="./1-gallery.html">Gallery</a></li>
+    <li><a href="./2-form.html">Form</a></li>
+</ul>
 </body>
 </html>
