--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <form class="feedback-form" autocomplete="off">
-        <label>
-            Email
-            <input type="email" name="email" autofocus />
-        </label>
-        <label>
-            Message
-            <textarea name="message" rows="8"></textarea>
-        </label>
-        <button type="submit">Submit</button>
-    </form>
+    <div class="form-container">
+        <form class="feedback-form" autocomplete="off">
+            <label class="label-class">
+                Email
+                <input class="input" type="email" name="email" autofocus />
+            </label>
+            <label class="label-class">
+                Message
+                <textarea class="textarea" name="message" rows="8"></textarea>
+            </label>
+            <button class="btn" type="submit">Submit</button>
+        </form>
+    </div>
+    
 
 </body>
 </html>
